tests/baselines/reference/parserExpressionStatement1.d.errors.txt
parserExpressionStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
parserExpressionStatement1.d.ts(1,1): error TS2304: Cannot find name 'Foo'.


==== parserExpressionStatement1.d.ts (2 errors) ====
    Foo();
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    ~~~
!!! error TS2304: Cannot find name 'Foo'.